--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 bcastd: a RIP broadcasting daemon for Linux
 
-Written by Ben Elliston (ben@cooper.compsol.fidonet.org)
-Version 1.0b
+Written by Ben Elliston (bje@air.net.au)
+Version 1.0c
 
 
 What is bcastd?
